--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "ejs": "^3.0.1",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
