--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongoose": "^5.8.3",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
-    "solc": "^0.4.24",
+    "sol": "^0.3.0",
+    "solc": "^0.4.26",
     "truffle-hdwallet-provider": "^1.0.17",
     "validator": "^12.1.0",
     "web3": "^1.2.4"
